{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 3,
  "lineage": "0214641e-a535-dbce-81da-c7901e2ac3ee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:route-table/rtb-08f048c4fd579edc9",
            "id": "rtb-08f048c4fd579edc9",
            "owner_id": "165412380958",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06769e708a640b51b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "poligon",
              "Name": "internal-poli"
            },
            "tags_all": {
              "Env": "poligon",
              "Name": "internal-poli"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-0465e4ae2df3296b3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_skiff",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:security-group/sg-081cbb5836f3cad44",
            "description": "allow trafic to k8s nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081cbb5836f3cad44",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Local trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "k8s-cluster-main.svc.aws.someshit.org",
            "name_prefix": "",
            "owner_id": "165412380958",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "k8s-cluster-main.svc.aws.someshit.org"
            },
            "tags_all": {
              "Name": "k8s-cluster-main.svc.aws.someshit.org"
            },
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-0465e4ae2df3296b3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165412380958:subnet/subnet-0930dc46cf6e7d303",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0930dc46cf6e7d303",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "165412380958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "poligon",
              "Name": "10.0.4.x-internal-poli"
            },
            "tags_all": {
              "Env": "poligon",
              "Name": "10.0.4.x-internal-poli"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0465e4ae2df3296b3"
          }
        }
      ]
    }
  ]
}